# wgnd-toolkit

./: .gitignore  README.md  pyproject.toml
examples/: wgnd_examples.ipynb
examples/data/: customers.csv
src/wgnd/: __init__.py  inspect.py  utils.py  viz.py
src/wgnd/core/: _output.py  config.py  theme.py
tests/: test_inspect.py
